<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase02 Options Map</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblrotategesture">Rotate Gesture</string>
    <string name="lblscrollgesture">Scroll Gesture</string>
    <string name="lblzoomcontrol">Zoom Control</string>
    <string name="lblzoomgesture">Zoom Gesture</string>
    <string-array name="map_options">
        <item >Normal</item>
        <item >Satelite</item>
        <item >Terreno</item>
        <item >Hibrido</item>
    </string-array>
    <string name="btnok">Aceptar</string>
    <string name="btncancel">Cancelar</string>
    <string name="lbltitleoptions">Opciones Mapa</string>
    <string name="lblcompass">Compass</string>
    <string name="lblmylocation">"Boton My Location "</string>
    <string name="lblMyLocation">Posición</string>

</resources>
