<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View 
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#0099CC"/>

    <Spinner
        android:id="@+id/spn_map_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/map_options" />

    <CheckBox
        android:id="@+id/chkRotategesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblrotategesture" />

    <CheckBox
        android:id="@+id/chkScrollgesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblscrollgesture" />

    <CheckBox
        android:id="@+id/chkZoomcontrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblzoomcontrol" />

    <CheckBox
        android:id="@+id/chkZoomgesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblzoomgesture" />
    
    <CheckBox
        android:id="@+id/chkMyLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMyLocation" />

</LinearLayout>